# progressive-diffusion-distillation-with-adaptive-step-curriculum

./: .gitignore  CHECKLIST.md  IMPROVEMENTS.md  QUICK_START.md  README.md  pyproject.toml  quick_test.py  requirements.txt
configs/: ablation.yaml  default.yaml
results/: config.yaml  results.json  training_metrics.json
scripts/: evaluate.py  predict.py  train.py
src/progressive_diffusion_distillation_with_adaptive_step_curriculum/: __init__.py
src/progressive_diffusion_distillation_with_adaptive_step_curriculum/evaluation/: __init__.py  analysis.py  metrics.py
src/progressive_diffusion_distillation_with_adaptive_step_curriculum/training/: __init__.py  trainer.py
src/progressive_diffusion_distillation_with_adaptive_step_curriculum/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
